# dlib-rnn

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
include/: binary.hpp  cudnn_rnn.hpp  ntm.hpp
